added the second and third blog

--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>My first website</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae, sed provident. Recusandae adipisci sint iure! Ratione repudiandae libero eveniet delectus ex voluptatibus ab ullam eaque pariatur. Sapiente quaerat officiis vitae.</p>
     </div>
+    <div>
+        <h3>My Second Blog</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae, sed provident. Recusandae adipisci sint iure! Ratione repudiandae libero eveniet delectus ex voluptatibus ab ullam eaque pariatur. Sapiente quaerat officiis vitae.</p>
+    </div>
+    <div>
+        <h3>My Third Blog</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae, sed provident. Recusandae adipisci sint iure! Ratione repudiandae libero eveniet delectus ex voluptatibus ab ullam eaque pariatur. Sapiente quaerat officiis vitae.</p>
+    </div>
 </body>
 </html>
