--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <h3>My Third Blog</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae, sed provident. Recusandae adipisci sint iure! Ratione repudiandae libero eveniet delectus ex voluptatibus ab ullam eaque pariatur. Sapiente quaerat officiis vitae.</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
